Located invisible edges bug, implemented temporary result.

--- a/veracitor/web/static/css/network.css
+++ b/veracitor/web/static/css/network.css
@@ -106,12 +106,18 @@
 
 #network-graph > .info > .content {
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 0; right: 0;
+    top: 0; bottom: 0;
+    width: 300px;
+    height: 100px;
+    margin: auto;
 
     font-size: 16pt;
     font-weight: 600;
-    vertical-align: middle;
+}
+
+#network-graph > .info > .content > p {
+    margin: 0;
 }
 
 #cytoscape {
